syntax = "proto3";
package nl.svsticky.chroma;

message CreateAlbumRequest {
  string name = 1;
}

message CreateAlbumResponse {
  string id = 1;
}